# flask-server

./: app.py  main.py  pyproject.toml  requirements.txt  shit.json
cogs/: music.py  profiles.py
templates/: 404.html  500.html  addbot.html  all-bots.html  bot.html  index.html  join_embed.html  stats.html
templates/mobile/: all-bots.html  bot.html  index.html  join.html  stats.html
userdata/: profiles.json
