[tool.poetry]
name = "dbiflask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2"
discord = "^1.0"
jishaku = "^1.18"
requests-oauthlib = "^1.3"
wtforms = "^2.2"
youtube-dl = "^2020.2"
ffmpeg = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
